--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://himanshigupta10.github.io/Clone-Instagram",
+  "homepage": "https://github.com/himanshigupta10/InstagramClone",
 
   "name": "instagramclone",
   "version": "0.1.0",
