--- a/package.json
+++ b/package.json
@@ -1,6 +1,5 @@
 {
-  "homepage": "https://github.com/himanshigupta10/InstagramClone",
-
+  "homepage": "https://himanshigupta10.github.io/CloneInstagram",
   "name": "instagramclone",
   "version": "0.1.0",
   "private": true,
